--- a/Python/Support Vector Machine.ipynb
+++ b/Python/Support Vector Machine.ipynb
@@ -550,12 +550,339 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "param_grid = {''}"
+    "param_grid = {'C': [0.1, 1, 10, 100, 1000], 'gamma': [1, 0.1, 0.01, 0.001, 0.0001]}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grid = GridSearchCV(SVC(), param_grid, verbose=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/mbair/anaconda3/lib/python3.6/site-packages/sklearn/model_selection/_split.py:2053: FutureWarning: You should specify a value for 'cv' instead of relying on the default value. The default value will change from 3 to 5 in version 0.22.\n",
+      "  warnings.warn(CV_WARNING, FutureWarning)\n",
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:    0.0s remaining:    0.0s\n",
+      "[Parallel(n_jobs=1)]: Done   2 out of   2 | elapsed:    0.0s remaining:    0.0s\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 3 folds for each of 25 candidates, totalling 75 fits\n",
+      "[CV] C=0.1, gamma=1 ..................................................\n",
+      "[CV] .................. C=0.1, gamma=1, score=0.6171875, total=   0.0s\n",
+      "[CV] C=0.1, gamma=1 ..................................................\n",
+      "[CV] ......... C=0.1, gamma=1, score=0.6220472440944882, total=   0.0s\n",
+      "[CV] C=0.1, gamma=1 ..................................................\n",
+      "[CV] ......... C=0.1, gamma=1, score=0.6190476190476191, total=   0.0s\n",
+      "[CV] C=0.1, gamma=0.1 ................................................\n",
+      "[CV] ................ C=0.1, gamma=0.1, score=0.6171875, total=   0.0s\n",
+      "[CV] C=0.1, gamma=0.1 ................................................\n",
+      "[CV] ....... C=0.1, gamma=0.1, score=0.6220472440944882, total=   0.0s\n",
+      "[CV] C=0.1, gamma=0.1 ................................................\n",
+      "[CV] ....... C=0.1, gamma=0.1, score=0.6190476190476191, total=   0.0s\n",
+      "[CV] C=0.1, gamma=0.01 ...............................................\n",
+      "[CV] ............... C=0.1, gamma=0.01, score=0.6171875, total=   0.0s\n",
+      "[CV] C=0.1, gamma=0.01 ...............................................\n",
+      "[CV] ...... C=0.1, gamma=0.01, score=0.6220472440944882, total=   0.0s\n",
+      "[CV] C=0.1, gamma=0.01 ...............................................\n",
+      "[CV] ...... C=0.1, gamma=0.01, score=0.6190476190476191, total=   0.0s\n",
+      "[CV] C=0.1, gamma=0.001 ..............................................\n",
+      "[CV] .............. C=0.1, gamma=0.001, score=0.6171875, total=   0.0s\n",
+      "[CV] C=0.1, gamma=0.001 ..............................................\n",
+      "[CV] ..... C=0.1, gamma=0.001, score=0.6220472440944882, total=   0.0s\n",
+      "[CV] C=0.1, gamma=0.001 ..............................................\n",
+      "[CV] ..... C=0.1, gamma=0.001, score=0.6190476190476191, total=   0.0s\n",
+      "[CV] C=0.1, gamma=0.0001 .............................................\n",
+      "[CV] ............. C=0.1, gamma=0.0001, score=0.8828125, total=   0.0s\n",
+      "[CV] C=0.1, gamma=0.0001 .............................................\n",
+      "[CV] .... C=0.1, gamma=0.0001, score=0.8976377952755905, total=   0.0s\n",
+      "[CV] C=0.1, gamma=0.0001 .............................................\n",
+      "[CV] .... C=0.1, gamma=0.0001, score=0.8888888888888888, total=   0.0s\n",
+      "[CV] C=1, gamma=1 ....................................................\n",
+      "[CV] .................... C=1, gamma=1, score=0.6171875, total=   0.0s\n",
+      "[CV] C=1, gamma=1 ....................................................\n",
+      "[CV] ........... C=1, gamma=1, score=0.6220472440944882, total=   0.0s\n",
+      "[CV] C=1, gamma=1 ....................................................\n",
+      "[CV] ........... C=1, gamma=1, score=0.6190476190476191, total=   0.0s\n",
+      "[CV] C=1, gamma=0.1 ..................................................\n",
+      "[CV] .................. C=1, gamma=0.1, score=0.6171875, total=   0.0s\n",
+      "[CV] C=1, gamma=0.1 ..................................................\n",
+      "[CV] ......... C=1, gamma=0.1, score=0.6220472440944882, total=   0.0s\n",
+      "[CV] C=1, gamma=0.1 ..................................................\n",
+      "[CV] ......... C=1, gamma=0.1, score=0.6190476190476191, total=   0.0s\n",
+      "[CV] C=1, gamma=0.01 .................................................\n",
+      "[CV] ................. C=1, gamma=0.01, score=0.6171875, total=   0.0s\n",
+      "[CV] C=1, gamma=0.01 .................................................\n",
+      "[CV] ........ C=1, gamma=0.01, score=0.6220472440944882, total=   0.0s\n",
+      "[CV] C=1, gamma=0.01 .................................................\n",
+      "[CV] ........ C=1, gamma=0.01, score=0.6190476190476191, total=   0.0s\n",
+      "[CV] C=1, gamma=0.001 ................................................\n",
+      "[CV] ................ C=1, gamma=0.001, score=0.9296875, total=   0.0s\n",
+      "[CV] C=1, gamma=0.001 ................................................\n",
+      "[CV] ........ C=1, gamma=0.001, score=0.905511811023622, total=   0.0s\n",
+      "[CV] C=1, gamma=0.001 ................................................\n",
+      "[CV] ....... C=1, gamma=0.001, score=0.8968253968253969, total=   0.0s\n",
+      "[CV] C=1, gamma=0.0001 ...............................................\n",
+      "[CV] ................ C=1, gamma=0.0001, score=0.921875, total=   0.0s\n",
+      "[CV] C=1, gamma=0.0001 ...............................................\n",
+      "[CV] ...... C=1, gamma=0.0001, score=0.9291338582677166, total=   0.0s\n",
+      "[CV] C=1, gamma=0.0001 ...............................................\n",
+      "[CV] ...... C=1, gamma=0.0001, score=0.9047619047619048, total=   0.0s\n",
+      "[CV] C=10, gamma=1 ...................................................\n",
+      "[CV] ................... C=10, gamma=1, score=0.6171875, total=   0.0s\n",
+      "[CV] C=10, gamma=1 ...................................................\n",
+      "[CV] .......... C=10, gamma=1, score=0.6220472440944882, total=   0.0s\n",
+      "[CV] C=10, gamma=1 ...................................................\n",
+      "[CV] .......... C=10, gamma=1, score=0.6190476190476191, total=   0.0s\n",
+      "[CV] C=10, gamma=0.1 .................................................\n",
+      "[CV] ................. C=10, gamma=0.1, score=0.6171875, total=   0.0s\n",
+      "[CV] C=10, gamma=0.1 .................................................\n",
+      "[CV] ........ C=10, gamma=0.1, score=0.6220472440944882, total=   0.0s\n",
+      "[CV] C=10, gamma=0.1 .................................................\n",
+      "[CV] ........ C=10, gamma=0.1, score=0.6190476190476191, total=   0.0s\n",
+      "[CV] C=10, gamma=0.01 ................................................\n",
+      "[CV] ................ C=10, gamma=0.01, score=0.6171875, total=   0.0s\n",
+      "[CV] C=10, gamma=0.01 ................................................\n",
+      "[CV] ....... C=10, gamma=0.01, score=0.6299212598425197, total=   0.0s\n",
+      "[CV] C=10, gamma=0.01 ................................................\n",
+      "[CV] ........ C=10, gamma=0.01, score=0.626984126984127, total=   0.0s\n",
+      "[CV] C=10, gamma=0.001 ...............................................\n",
+      "[CV] ................ C=10, gamma=0.001, score=0.921875, total=   0.0s\n",
+      "[CV] C=10, gamma=0.001 ...............................................\n",
+      "[CV] ....... C=10, gamma=0.001, score=0.905511811023622, total=   0.0s\n",
+      "[CV] C=10, gamma=0.001 ...............................................\n",
+      "[CV] ....... C=10, gamma=0.001, score=0.873015873015873, total=   0.0s\n",
+      "[CV] C=10, gamma=0.0001 ..............................................\n",
+      "[CV] ............... C=10, gamma=0.0001, score=0.953125, total=   0.0s\n",
+      "[CV] C=10, gamma=0.0001 ..............................................\n",
+      "[CV] ..... C=10, gamma=0.0001, score=0.9291338582677166, total=   0.0s\n",
+      "[CV] C=10, gamma=0.0001 ..............................................\n",
+      "[CV] ..... C=10, gamma=0.0001, score=0.9206349206349206, total=   0.0s\n",
+      "[CV] C=100, gamma=1 ..................................................\n",
+      "[CV] .................. C=100, gamma=1, score=0.6171875, total=   0.0s\n",
+      "[CV] C=100, gamma=1 ..................................................\n",
+      "[CV] ......... C=100, gamma=1, score=0.6220472440944882, total=   0.0s\n",
+      "[CV] C=100, gamma=1 ..................................................\n",
+      "[CV] ......... C=100, gamma=1, score=0.6190476190476191, total=   0.0s\n",
+      "[CV] C=100, gamma=0.1 ................................................\n",
+      "[CV] ................ C=100, gamma=0.1, score=0.6171875, total=   0.0s\n",
+      "[CV] C=100, gamma=0.1 ................................................\n",
+      "[CV] ....... C=100, gamma=0.1, score=0.6220472440944882, total=   0.0s\n",
+      "[CV] C=100, gamma=0.1 ................................................\n",
+      "[CV] ....... C=100, gamma=0.1, score=0.6190476190476191, total=   0.0s\n",
+      "[CV] C=100, gamma=0.01 ...............................................\n",
+      "[CV] ............... C=100, gamma=0.01, score=0.6171875, total=   0.0s\n",
+      "[CV] C=100, gamma=0.01 ...............................................\n",
+      "[CV] ...... C=100, gamma=0.01, score=0.6299212598425197, total=   0.0s\n",
+      "[CV] C=100, gamma=0.01 ...............................................\n",
+      "[CV] ....... C=100, gamma=0.01, score=0.626984126984127, total=   0.0s\n",
+      "[CV] C=100, gamma=0.001 ..............................................\n",
+      "[CV] ............... C=100, gamma=0.001, score=0.921875, total=   0.0s\n",
+      "[CV] C=100, gamma=0.001 ..............................................\n",
+      "[CV] ...... C=100, gamma=0.001, score=0.905511811023622, total=   0.0s\n",
+      "[CV] C=100, gamma=0.001 ..............................................\n",
+      "[CV] ...... C=100, gamma=0.001, score=0.873015873015873, total=   0.0s\n",
+      "[CV] C=100, gamma=0.0001 .............................................\n",
+      "[CV] .............. C=100, gamma=0.0001, score=0.953125, total=   0.0s\n",
+      "[CV] C=100, gamma=0.0001 .............................................\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[CV] .... C=100, gamma=0.0001, score=0.9212598425196851, total=   0.0s\n",
+      "[CV] C=100, gamma=0.0001 .............................................\n",
+      "[CV] .... C=100, gamma=0.0001, score=0.9206349206349206, total=   0.0s\n",
+      "[CV] C=1000, gamma=1 .................................................\n",
+      "[CV] ................. C=1000, gamma=1, score=0.6171875, total=   0.0s\n",
+      "[CV] C=1000, gamma=1 .................................................\n",
+      "[CV] ........ C=1000, gamma=1, score=0.6220472440944882, total=   0.0s\n",
+      "[CV] C=1000, gamma=1 .................................................\n",
+      "[CV] ........ C=1000, gamma=1, score=0.6190476190476191, total=   0.0s\n",
+      "[CV] C=1000, gamma=0.1 ...............................................\n",
+      "[CV] ............... C=1000, gamma=0.1, score=0.6171875, total=   0.0s\n",
+      "[CV] C=1000, gamma=0.1 ...............................................\n",
+      "[CV] ...... C=1000, gamma=0.1, score=0.6220472440944882, total=   0.0s\n",
+      "[CV] C=1000, gamma=0.1 ...............................................\n",
+      "[CV] ...... C=1000, gamma=0.1, score=0.6190476190476191, total=   0.0s\n",
+      "[CV] C=1000, gamma=0.01 ..............................................\n",
+      "[CV] .............. C=1000, gamma=0.01, score=0.6171875, total=   0.0s\n",
+      "[CV] C=1000, gamma=0.01 ..............................................\n",
+      "[CV] ..... C=1000, gamma=0.01, score=0.6299212598425197, total=   0.0s\n",
+      "[CV] C=1000, gamma=0.01 ..............................................\n",
+      "[CV] ...... C=1000, gamma=0.01, score=0.626984126984127, total=   0.0s\n",
+      "[CV] C=1000, gamma=0.001 .............................................\n",
+      "[CV] .............. C=1000, gamma=0.001, score=0.921875, total=   0.0s\n",
+      "[CV] C=1000, gamma=0.001 .............................................\n",
+      "[CV] ..... C=1000, gamma=0.001, score=0.905511811023622, total=   0.0s\n",
+      "[CV] C=1000, gamma=0.001 .............................................\n",
+      "[CV] ..... C=1000, gamma=0.001, score=0.873015873015873, total=   0.0s\n",
+      "[CV] C=1000, gamma=0.0001 ............................................\n",
+      "[CV] ............ C=1000, gamma=0.0001, score=0.9453125, total=   0.0s\n",
+      "[CV] C=1000, gamma=0.0001 ............................................\n",
+      "[CV] .... C=1000, gamma=0.0001, score=0.889763779527559, total=   0.0s\n",
+      "[CV] C=1000, gamma=0.0001 ............................................\n",
+      "[CV] ... C=1000, gamma=0.0001, score=0.9126984126984127, total=   0.0s\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done  75 out of  75 | elapsed:    0.8s finished\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv='warn', error_score='raise-deprecating',\n",
+       "       estimator=SVC(C=1.0, cache_size=200, class_weight=None, coef0=0.0,\n",
+       "  decision_function_shape='ovr', degree=3, gamma='auto_deprecated',\n",
+       "  kernel='rbf', max_iter=-1, probability=False, random_state=None,\n",
+       "  shrinking=True, tol=0.001, verbose=False),\n",
+       "       fit_params=None, iid='warn', n_jobs=None,\n",
+       "       param_grid={'C': [0.1, 1, 10, 100, 1000], 'gamma': [1, 0.1, 0.01, 0.001, 0.0001]},\n",
+       "       pre_dispatch='2*n_jobs', refit=True, return_train_score='warn',\n",
+       "       scoring=None, verbose=3)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'C': 10, 'gamma': 0.0001}"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SVC(C=10, cache_size=200, class_weight=None, coef0=0.0,\n",
+       "  decision_function_shape='ovr', degree=3, gamma=0.0001, kernel='rbf',\n",
+       "  max_iter=-1, probability=False, random_state=None, shrinking=True,\n",
+       "  tol=0.001, verbose=False)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid.best_estimator_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9343832020997376"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid.best_score_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gridPred = grid.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 63   4]\n",
+      " [  3 118]]\n",
+      "\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.95      0.94      0.95        67\n",
+      "           1       0.97      0.98      0.97       121\n",
+      "\n",
+      "   micro avg       0.96      0.96      0.96       188\n",
+      "   macro avg       0.96      0.96      0.96       188\n",
+      "weighted avg       0.96      0.96      0.96       188\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(confusion_matrix(y_test, gridPred))\n",
+    "print()\n",
+    "print(classification_report(y_test, gridPred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
